static/base.css
/* ... */
.page.extended {
    padding-left: 300px;
}


/* Game */

.page > .game {
    position: relative;
    box-sizing: border-box;
    width: 100%;
    padding-left: calc(50% - 600px + 80px);
    padding-right: calc(50% - 600px + 30px);
    min-height: 60vh;
    background-color: rgba(37, 48, 53, 0.86);
    color: white;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    clear: both;
}

body[data-page="dice"] .game {
    min-height: calc(100vh - 100px);
}

body[data-page="flip"] .game {
    min-height: 65vh;
}

body[data-page="crash"] .game, body[data-page="transfer"] .game {
    min-height: 100vh;
}

.page > .game > .head {
    position: relative;
    height: 80px;
    width: 100%;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 50px;
}

.page > .game > .head > .latest {
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    width: 250px
}

.page > .game > .head > .latest .item {
    width: 30px;
    height: 30px;
    padding-top: 6px;
    box-sizing: border-box;
    text-align: center;
    background-color: rgba(255, 255, 255, .2);
    margin-left: 5px;
    font-weight: 700;
}

.page > .game > .head > .latest .item:hover {
    color: #FF5B5B;
    cursor: pointer;
}

.page > .game > .head > .latest p {
    margin-right: 5px;
}

.page > .game > .head::after {
    position: absolute;
    bottom: 0;
    content: "";
    width: 100%;
    height: 2px;
    background-color: rgba(255, 255, 255, .2);
}

.page > .game > .head::before {
    position: absolute;
    bottom: 0;
    content: "";
    width: 100%;
    height: 2px;
    background-color: #1ABE65;
    width: 50%;
}

.page > .game > .numbers-con {
    position: relative;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    width: 75%;
    margin: auto;
    font-weight: 700;
    color: white;
}

.flip-con .numbers-con h1 {
    margin-top: 0;
    font-size: 3em;
}

.page > .game > .numbers-con > .numbers {
    width: 100%;
    max-width: 1000px;
    margin: auto;
    height: 50px;
    margin-bottom: 8vh;
}

.page > .game > .numbers-con > .numbers .item {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    min-width: 8.3%;
    min-height: 100%;
    -webkit-box-flex: 1;
    -ms-flex: 1 15 auto;
    flex: 1 15 auto;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}

div[data-color="red"] {
    background-color: #FF5B5B;
}

div[data-color="green"] {
    background-color: #1ABE65;
}

div[data-color="black"] {
    background-color: #1F2528;
}

div[data-color].button {
    padding: 15px;
    display: flex;
    min-width: 170px;
    align-items: center;
    justify-content: center;
}

.bet-con > .button {
    font-weight: 700;
    font-size: 1.2em;
}

.bet-con p.col-1 {
    -ms-flex-negative: 0;
    flex-shrink: 0;
}

.bet-con > .bet-inp {
    position: relative;
}

.bet-con > .bet-inp > .sub {
    position: absolute;
    width: 100%;
    bottom: calc(-20px);
    left: 0;
}

.bet-con > .bet-inp > .sub h5 {
    color: white;
}

.bet-con > .bet-inp .button {
    display: block;
    padding: 0;
    padding-top: 0px;
    box-sizing: border-box;
    min-width: 20px;
    width: 20px;
    height: 20px;
    min-height: 20px;
    text-align: center;
    background-color: #494D56;
    z-index: 5;
}

body[data-page="roulette"] .bet-con > .bet-inp .button {
    padding: 8px;
    -ms-flex-item-align: center;
    -ms-grid-row-align: center;
    align-self: center;
    width: auto;
    height: 30px;
    padding-top: 5px;
}

.bet-con h5 {
    display: inline-block;
    text-align: center;
}

.bet-con .bet-amt {
    width: 80px;
    height: 40px;
    color: white;
    font-size: 1.5em;
    font-weight: 700;
    margin: 7.5px;
    z-index: 5;
    text-align: center;
}

.bet-con .button {
    color: rgba(255, 255, 255, .6);
    margin: 7.5px;
}

.bet-con .button:hover {
    color: white;
}

.game > .odds {
    position: relative;
    left: 0;
    bottom: -55px;
    z-index: 5;
    box-sizing: border-box;
    padding: 0 30px 0 80px;
    font-weight: 700;
}

.game > .odds .info {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    height: 50px;
}

.game > .button.cta {
    box-sizing: border-box;
}

.game > .button.cta:hover {
    -webkit-filter: contrast(1.25);
    filter: contrast(1.25);
}

.game > .flip-con {
    margin-bottom: 0;
}

.game > .flip-con > .bar {
    width: 50%;
    height: 40px;
    content: "50%";
    color: white;
    text-align: center;
    font-weight: 700;
    background-color: #181C21;
}

.game > .flip-con > .bar::after {
    width: 50%;
    height: inherit;
    display: block;
    content: "50%";
    float: right;
    background-color: #1ABE65;
    padding-top: 10px;
    box-sizing: border-box;
}

.game > .flip-con > .bar::before {
    width: 50%;
    height: inherit;
    display: block;
    content: "50%";
    float: left;
    background-color: #181C21;
    padding-top: 10px;
    box-sizing: border-box;
}

.crash-left > .tab-con {
    padding: 15px;
}

.crash-left .tab {
    display: inline-block;
    text-align: center;
    padding-top: 5px;
    height: 40px;
}

.crash-left .tab.button {
    border-bottom: 2px solid rgba(255, 255, 255, .075);
}

.crash-left .tab.button.active {
    border-bottom: 2px solid rgba(255, 255, 255, .2);
}

.crash-left .tab.button:hover {
    border-bottom: 2px solid white;
}

.crash-left > .chart-con {
    padding-top: 50px;
    padding-bottom: 50px;
}

.crash-left > .button {
    margin: auto;
    margin-bottom: 40px;
}

.crash-left > .chart-con > .bet-con {
    width: 120px;
}

.crash-left > .chart-con > .bet-con .bet-amt {
    width: 100%;
    margin: 0;
}
/* ... */

